set up base reusable files for easy implementation
