# controllers/user_controller.go
@@ -1,7 +1,6 @@
 package controllers
 
 import (
-	"log"
 	"net/http"
 	"product-service-app/models"
 	"product-service-app/services"
@@ -17,14 +16,29 @@ func NewUserController(userService *services.UserService) *UserController {
 	return &UserController{UserService: userService}
 }
 
-func (ctrl *UserController) Register(c *gin.Context) {
-	var req struct {
-		Username string `json:"username" binding:"required"`
-		Email    string `json:"email" binding:"required"`
-		Password string `json:"password" binding:"required"`
-		RoleID   uint   `json:"role_id" binding: "required"`
-	}
+type registerUserDto struct {
+	Username string `json:"username" binding:"required"`
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	RoleID   uint   `json:"role_id" binding: "required"`
+}
 
+type loginUserDto struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+// RegisterUser godoc
+// @Summary Create a new user
+// @Description Create a new user with the input payload
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body registerUserDto true "User Data"
+// @Success 201 {object} models.User
+// @Router /api/auth/register [post]
+func (ctrl *UserController) Register(c *gin.Context) {
+	var req registerUserDto
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -39,11 +53,17 @@ func (ctrl *UserController) Register(c *gin.Context) {
 	c.JSON(http.StatusCreated, user)
 }
 
+// LoginUser godoc
+// @Summary login a user
+// @Description authenticated user credentials
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body loginUserDto true "Login Data"
+// @Success 201 {object} models.User
+// @Router /api/auth/login [post]
 func (ctrl *UserController) Login(c *gin.Context) {
-	var req struct {
-		Email    string `json:"email" binding:"required"`
-		Password string `json:"password" binding:"required"`
-	}
+	var req loginUserDto
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -66,10 +86,9 @@ func (ctrl *UserController) Login(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} models.User
-// @Router /api/user/me [get]
+// @Router /api/users/me [get]
 func (ctrl *UserController) GetCurrentUser(c *gin.Context) {
-	userID, exists := c.Get("userID")
-	log.Println("userId", userID)
+	userID, exists := c.MustGet("userID").(uint)
 	if !exists {
 		c.JSON(http.StatusUnauthorized, gin.H{"error": "User not authenticated"})
 		return
